@@ -20,10 +20,7 @@ message("${THE_C} and ${REAL_C} is 3")
 		# As compiler gfortran works with clang in many
 		# cases, so we assume this standard behavior
 		# here as well
-#		if(APPLE)
-#		else(APPLE)
-#		endif(APPLE)
-		  find_program(THE_FC NAMES $ENV{FC} gfortran gfortran-mp-5 gfortran-mp-4.9 gfortran-mp-4.8 gfortran-mp-4.6 g95 g77)
+		find_program(THE_FC NAMES $ENV{FC} gfortran g95 g77)
 	else()       
 	   message("WARNING: ${THE_C} did not match any of the preset C compilers" )
 	   message("Continuing with the default compiler: ${CMAKE_C_COMPILER}" )
